# ChangeLog for x11-libs/libxcb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.153 2015/02/22 13:22:41 ago Exp $

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
  Stable for amd64, wrt bug #530652

*libxcb-1.11-r1 (30 Dec 2014)

  30 Dec 2014; Rémi Cardona <remi@gentoo.org> +libxcb-1.11-r1.ebuild,
  +files/libxcb-1.11-Don-t-install-headers-man-pages-for-disabled-extensi.patch
  :
  Don't install headers/man pages for disabled extension, see bug #533906.

  21 Dec 2014; Michał Górny <mgorny@gentoo.org> files/xcb-rebuilder.sh:
  Use sys-apps/gentoo-functions in xcb-rebuilder, bug #504420.

*libxcb-1.11 (22 Oct 2014)

  22 Oct 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/libxcb-1.11-xevie-xprint_removal.patch, +libxcb-1.11.ebuild:
  Version bump.

  03 Sep 2014; Mike Gilbert <floppym@gentoo.org> libxcb-1.10.ebuild:
  Drop MULTILIB_USEDEP from xcb-proto in python_check_deps, bug 520146.

  21 Aug 2014; Mike Gilbert <floppym@gentoo.org> libxcb-1.10.ebuild:
  Add missing ${PYTHON_DEPS} to DEPEND, bug 520146.

  29 Jul 2014; Michał Górny <mgorny@gentoo.org> libxcb-1.10.ebuild,
  libxcb-1.9.3-r1.ebuild:
  Fix finding Python when building in a root, bug #503228. Patch by James Le
  Cuirot.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> libxcb-1.10.ebuild,
  libxcb-1.9.1-r1.ebuild, libxcb-1.9.1.ebuild, libxcb-1.9.3-r1.ebuild,
  libxcb-1.9.3.ebuild: