@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/libxcb-1.11-r1.ebuild,v 1.6 2015/02/22 13:22:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/libxcb-1.11-r1.ebuild,v 1.8 2015/02/23 01:55:21 mattst88 Exp $
 
 EAPI=5
 
@@ -19,7 +19,7 @@ EGIT_REPO_URI="git://anongit.freedesktop.org/git/xcb/libxcb"
 	SRC_URI="http://xcb.freedesktop.org/dist/${P}.tar.bz2"
 
 KEYWORDS="~alpha amd64 ~arm ~arm64 ~hppa ia64 ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE="selinux xkb"
+IUSE="doc selinux test xkb"
 SLOT="0/${PV}"
 
 RDEPEND=">=dev-libs/libpthread-stubs-0.3-r1[${MULTILIB_USEDEP}]
@@ -27,6 +27,8 @@ RDEPEND=">=dev-libs/libpthread-stubs-0.3-r1[${MULTILIB_USEDEP}]
 	>=x11-libs/libXdmcp-1.1.1-r1[${MULTILIB_USEDEP}]"
 # Note: ${PYTHON_USEDEP} needs to go verbatim
 DEPEND="${RDEPEND}
+	test? ( dev-libs/check[${MULTILIB_USEDEP}] )
+	doc? ( app-doc/doxygen[dot] )
 	dev-libs/libxslt
 	${PYTHON_DEPS}
 	$(python_gen_any_dep \
@@ -47,7 +49,7 @@ PATCHES=(
 
 src_configure() {
 	XORG_CONFIGURE_OPTIONS=(
-		$(use_enable doc build-docs)
+		$(use_enable doc devel-docs)
 		$(use_enable selinux)
 		$(use_enable xkb)
 		--enable-xinput
