@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libxcb
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.153 2015/02/22 13:22:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.155 2015/02/23 01:55:21 mattst88 Exp $
+
+  23 Feb 2015; Matt Turner <mattst88@gentoo.org> libxcb-1.11-r1.ebuild:
+  Add docs USE flag and add proper dependency, bug 534122.
+
+  23 Feb 2015; Matt Turner <mattst88@gentoo.org> libxcb-1.11-r1.ebuild:
+  Depend on dev-libs/check for tests, bug 484054.
 
   22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libxcb-1.11-r1.ebuild:
   Stable for ia64, wrt bug #530652
